--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-query": "latest",
     "@tanstack/react-query-devtools": "latest",
     "autoprefixer": "^10.4.20",
